--- a/homework/homework5.ipynb
+++ b/homework/homework5.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy import stats"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -17,11 +19,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### Критерий Стьюдента Используется:\n",
+    "1. Когда стандартное отклонение популяции неизвестно и должно быть оценено по образцу данных.\n",
+    "2. Для сравнения средних значений двух групп.\n",
+    "3. Для сравнения средних значений двух выборок, если данные для двух групп распределены нормально.\n",
+    "##### Закон Z-критерия используется:\n",
+    "1. Когда известны среднее значение совокупности и стандартное отклонение, предполагается, что выборка распределена нормально\n",
+    "2. Для проверки гипотезы о равенстве среднего значения генеральной совокупности с известным значением.\n",
+    "3. Для проверки гипотезы о когда известны среднее значение совокупности и стандартное отклонение, что позволит оценить точность среднего значения измерения в генеральной совокупности, а также понять, насколько данные в выборке представляют собой нормальное распределение."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -34,10 +43,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z = 2.5\n",
+      "z_tabl = -1.6448536269514729\n",
+      "0 гипотеза неверна\n"
+     ]
+    }
+   ],
+   "source": [
+    "# H0: m=17\n",
+    "# H1: m>17\n",
+    "m0 = 17\n",
+    "a = 0.05\n",
+    "n = 100\n",
+    "x = 17.5\n",
+    "D = 4\n",
+    "sko = D**0.5\n",
+    "\n",
+    "z=(x-m0)/(sko/(n**0.5)) \n",
+    "print(f'z = {z}')\n",
+    "\n",
+    "z_tabl = stats.norm.ppf(a)\n",
+    "print(f'z_tabl = {z_tabl}')\n",
+    "\n",
+    "if abs(z)<abs(z_tabl):\n",
+    "    print('0 гипотеза верна') \n",
+    "else:\n",
+    "    print('0 гипотеза неверна')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,10 +93,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m=198.5\n",
+      "t = -1.0651074037450896\n",
+      "t_tabl = -3.2498355440153697\n",
+      "0 гипотеза верна\n"
+     ]
+    }
+   ],
+   "source": [
+    "# H0: m=200\n",
+    "# H1: m!=200\n",
+    "# Нам неизвестна дисперсия и мы проверяем гипотезу относительно математического ожидания нормально распределённой случайной величины будем использовать \n",
+    "# -критерий t\n",
+    "\n",
+    "import numpy as np\n",
+    "m0 = 200\n",
+    "x = [202, 203, 199, 197, 195, 201, 200, 204, 194, 190]\n",
+    "n = len(x)\n",
+    "p = 0.99\n",
+    "x1 = np.mean(x)\n",
+    "sko = np.std(x, ddof = 1)\n",
+    "print(f'm={x1}')\n",
+    "a = 1 - p\n",
+    "\n",
+    "t = (x1 - m0)/(sko/(n**0.5))\n",
+    "print(f't = {t}')\n",
+    "\n",
+    "t_tabl = stats.t.ppf(a/2,n-1)\n",
+    "print(f't_tabl = {t_tabl}')\n",
+    "\n",
+    "if abs(t)<abs(t_tabl):\n",
+    "    print('0 гипотеза верна') \n",
+    "else:\n",
+    "    print('0 гипотеза неверна')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,15 +148,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = 0.025\n",
+      "p = 0.5911212354055175\n",
+      "0 гипотеза верна\n"
+     ]
+    }
+   ],
+   "source": [
+    "# H0: различий нет\n",
+    "# H1: различия есть\n",
+    "\n",
+    "x1 = [172, 177, 158, 170, 178,175, 164, 160, 169]\n",
+    "x2 = [173, 175, 162, 174, 175, 168, 155, 170, 160]\n",
+    "\n",
+    "a=0.05/2\n",
+    "\n",
+    "t, p = stats.ttest_rel(x1, x2)\n",
+    "\n",
+    "print(f'a = {a}')\n",
+    "print(f'p = {p}')\n",
+    "\n",
+    "if p>a/2:\n",
+    "    print('0 гипотеза верна') \n",
+    "else:\n",
+    "    print('0 гипотеза неверна')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
