--- a/sem6.ipynb
+++ b/sem6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +43,37 @@
     "se = (P * (1 - P) * (1 / n1 + 1 / n2)) ** 0.5\n",
     "z_tabl = stats.norm.ppf(0.975)\n",
     "print(delta - se * z_tabl, delta + se * z_tabl)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Задача 2\n",
+    "\n",
+    "Решить задачу 1 через тестирование гипотезы.\n",
+    "На препарате А положительный результат лечения наблюдается у 17 из 32 пациентов, а на препарате В у 9 из 22. Являются ли различия статистически значимые между долями пациентов с положительным эффектом в этих двух группах.\n",
+    "Уровень статистической значимости принять за 0.05"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.12215909090909088"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "delta"
    ]
   },
   {
